<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_add">添加</string>
    <string name="action_ar_mode">AR模式</string>
    <string name="action_auto_hide_gear">档位自动隐藏</string>
    <string name="action_auto_hide_gear_summary">&gt;30km/h 隐藏；&lt;10km/h 显示</string>
    <string name="action_cruise_lane_count">车道数量测试</string>
    <string name="action_cruise_light_mode_1">1 直行</string>
    <string name="action_cruise_light_mode_2">2 左+直</string>
    <string name="action_cruise_light_mode_3">3 左+直+右</string>
    <string name="action_cruise_traffic_light_count">巡航红绿灯数测试</string>
    <string name="action_delete">删除</string>
    <string name="action_modify">修改</string>
    <string name="action_preview_all">预览所添加的组件</string>
    <string name="action_reset">重置</string>
    <string name="action_save">保存</string>
    <string name="action_settings">设置</string>
    <string name="action_snow_mode">雪地</string>
    <string name="action_song_component_width">歌曲组件宽度</string>
    <string name="action_song_marquee_pause">滚动间隔(s)</string>
    <string name="activation_declaration">别看只是一个小功能，背后其实是一堆熬夜和反复调试。\n\n实在撑不住继续免费维护了，只好小小象征性收费回点血。\n\n一顿饭钱，算是我继续更新的动力来源��</string>
    <string name="activation_failed_message">验证失败，请检查激活码！</string>
    <string name="adb_auto_connect">ADB连接</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_credit">by @Cheter·Chao, based on @马大师          本软件大部分功能免费，请勿用于商业用途！</string>
    <string name="app_name">领克车机助手</string>
    <string name="app_necessary_permissions">应用必要权限</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="boot_event_detected">检测到开机事件</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_auto_repair">一键修复</string>
    <string name="btn_clear_boot_log">清除开机日志</string>
    <string name="btn_clear_runtime_log">清除运行日志</string>
    <string name="btn_delete_logs">删除日志</string>
    <string name="btn_export_log">导出到Downloads</string>
    <string name="btn_pause_log_updates">暂停日志滚动</string>
    <string name="btn_view_boot_log">查看开机日志</string>
    <string name="btn_view_runtime_log">查看运行日志</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="desc_delete_config">左滑删除</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确认</string>
    <string name="dialog_hud_reset_message">确定要重置当前 HUD 布局吗？该操作不可恢复。</string>
    <string name="dialog_hud_reset_title">确认重置</string>
    <string name="dialog_release_notice_acknowledged">我已知晓</string>
    <string name="dialog_release_notice_reading_countdown">请阅读（%1$d）</string>
    <string name="dialog_release_notice_rules">1. 本软件基于星越L车主@马大师 的车机助手分支开发并进行了功能精简，仅在基于8155且车机底层为安卓9的领克OSN车机上测试通过，其他车型请慎用！。\n\n2. 软件大部分功能免费！严禁任何形式的倒卖，转发请注明作者！。\n\n3. 请严格遵守法律法规，在确保行车安全的前提下使用软件。因使用不当造成的任何后果由使用者自行承担。</string>
    <string name="dialog_release_notice_title">免责声明</string>
    <string name="enable_accessibility_toast">请启用无障碍服务</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_launch_exception">启动异常: %1$s</string>
    <string name="error_launch_failed">启动失败: %1$s</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="failed_open_auto_start">无法打开自启动设置</string>
    <string name="floating_ball_title">桌面悬浮球</string>
    <string name="floating_traffic_light_title">悬浮红绿灯</string>
    <string name="header_hud_control">HUD设置</string>
    <string name="header_system_info">系统信息</string>
    <string name="item_view_role_description">Tab</string>
    <string name="key_next_track">下一曲</string>
    <string name="key_play_pause">播放/暂停</string>
    <string name="key_prev_track">上一曲</string>
    <string name="key_unknown">未知按键</string>
    <string name="label_boot_time">启动时间: %1$s</string>
    <string name="launch_delay">启动延时</string>
    <string name="launching_app">正在启动: %1$s</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="media_key_service_title">媒体按键监听服务状态</string>
    <string name="msg_adb_granting">正在授予 ADB 权限...</string>
    <string name="msg_granting_battery">正在授予电池优化权限...</string>
    <string name="msg_granting_secure">正在授予安全设置权限...</string>
    <string name="mtrl_checkbox_button_icon_path_checked">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="mtrl_checkbox_button_icon_path_group_name">icon</string>
    <string name="mtrl_checkbox_button_icon_path_indeterminate">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="mtrl_checkbox_button_icon_path_name">icon path</string>
    <string name="mtrl_checkbox_button_path_checked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z</string>
    <string name="mtrl_checkbox_button_path_group_name">button</string>
    <string name="mtrl_checkbox_button_path_name">button path</string>
    <string name="mtrl_checkbox_button_path_unchecked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z M23,23H9V9h14V23z</string>
    <string name="mtrl_checkbox_state_description_checked">Checked</string>
    <string name="mtrl_checkbox_state_description_indeterminate">Partially checked</string>
    <string name="mtrl_checkbox_state_description_unchecked">Not checked</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_cancel">Cancel</string>
    <string name="mtrl_picker_confirm">OK</string>
    <string name="mtrl_picker_day_of_week_column_header">%1$s</string>
    <string name="mtrl_picker_navigate_to_current_year_description">Navigate to current year %1$d</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$d</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to Calendar view</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to year view</string>
    <string name="mtrl_switch_thumb_group_name">circle_group</string>
    <string name="mtrl_switch_thumb_path_checked">M4,16 A12,12 0 0,1 16,4 H16 A12,12 0 0,1 16,28 H16 A12,12 0 0,1 4,16</string>
    <string name="mtrl_switch_thumb_path_morphing">M0,16 A11,11 0 0,1 11,5 H21 A11,11 0 0,1 21,27 H11 A11,11 0 0,1 0,16</string>
    <string name="mtrl_switch_thumb_path_name">circle</string>
    <string name="mtrl_switch_thumb_path_pressed">M2,16 A14,14 0 0,1 16,2 H16 A14,14 0 0,1 16,30 H16 A14,14 0 0,1 2,16</string>
    <string name="mtrl_switch_thumb_path_unchecked">M8,16 A8,8 0 0,1 16,8 H16 A8,8 0 0,1 16,24 H16 A8,8 0 0,1 8,16</string>
    <string name="mtrl_switch_track_decoration_path">M1,16 A15,15 0 0,1 16,1 H36 A15,15 0 0,1 36,31 H16 A15,15 0 0,1 1,16</string>
    <string name="mtrl_switch_track_path">M0,16 A16,16 0 0,1 16,0 H36 A16,16 0 0,1 36,32 H16 A16,16 0 0,1 0,16</string>
    <string name="music_icon_desc">音乐 图标</string>
    <string name="nav_icon_desc">导航 图标</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="perm_accessibility">无障碍服务</string>
    <string name="perm_battery">电池优化</string>
    <string name="unit_seconds">秒</string>
</resources>