<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingVertical="4dp">
    <Spinner android:id="0x7f0901f8" android:layout_width="0dp" android:layout_height="48dp" android:layout_weight="1" android:layout_marginEnd="8dp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/launch_delay" android:layout_marginEnd="4dp"/>
    <EditText android:textSize="14sp" android:gravity="center" android:id="0x7f0900e6" android:layout_width="60dp" android:layout_height="wrap_content" android:text="0" android:completionThreshold="1" android:inputType="number"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unit_seconds" android:layout_marginStart="4dp"/>
    <ImageButton android:id="0x7f09006b" android:background="?android:attr/selectableItemBackgroundBorderless" android:layout_width="40dp" android:layout_height="40dp" android:src="@drawable/ic_close" android:contentDescription="@string/desc_delete_config" android:layout_marginStart="16dp"/>
</LinearLayout>
